test/compile_errors/stage1/obj/only_equality_binary_operator_allowed_for_error_sets.zig
comptime {
    const z = error.A > error.B;
    _ = z;
}

// only equality binary operator allowed for error sets
//
// tmp.zig:2:23: error: operator not allowed for errors
